--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <div class="flex">
         <a href="#">
-            <img class="w-auto h-7" 
+            <img class="codespace-img" 
             src="https://codespace-assets.global.ssl.fastly.net/wp/assets/website/codespace-primary-logo-light.svg">
         </a>
       
